k8s/ingress/heroes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heroes-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:774305581884:certificate/6d104ab9-3ba9-4722-8ee6-6da441b2993a
    alb.ingress.kubernetes.io/healthcheck-path: /swagger-ui/index.html  # 헬스 체크 경로 설정
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
      {"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}  # HTTP 요청을 HTTPS로 리다이렉트 설정
spec:
  ingressClassName: alb
  rules:
    - host: hq-heroes-api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heroes-service
                port:
                  number: 8080
    - host: hq-heroes-web.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heroes-frontend-service
                port:
                  number: 80
